# duckdb-age

./: CMakeLists.txt  FUNCTIONS.md  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  test.yml
docs/: CI_OPTIMIZATIONS.md
rust/: Cargo.toml
rust/src/: lib.rs
src/: age_extension.cpp
src/include/: age_extension.hpp
test/sql/: age.test  age_secret.test
